增加了目录生成级别的设置：header_level:2, 增加了双击是否展开的设置：dblClickExpand:true,

--- a/js/md-nav_bar.html
+++ b/js/md-nav_bar.html
@@ -23,6 +23,8 @@
 	var jquery_ztree_toc_opts = {
 		debug:false,
 		is_auto_number:true,
+		header_level:6,
+		dblClickExpand:true,
 		documment_selector:'.markdown-body',
 		ztreeStyle: {
 			width:'326px',
